# GitGuild

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS  GUILD  LICENSE  Makefile  Makefile.am  README.md  configure  configure.ac  gitguild  setup.py
conf/: gitolite.conf
doc/: consensus.md  faq.md  file-structure.md  ledger.md  roadmap.md  templates.md  transactions.md  whitepaper.md
doc/issues/closed/: basic_commit.md  configure_local.md  file_templates.md  init_flat.md  register_flat.md  status_flat.md
doc/issues/open/: commit_contribution.md  contribute_XP_only.md  issue_vote.md
doc/src/: gitguild_mirror_network.dia  guild_genesis.dia  guild_network.dia  personal_genesis.dia  personal_network.dia  second_member_joins_guild.dia  third_member_joins_guild.dia
gitguild/: __init__.py  gg.py  types.py
gitguild/template/medieval/: charter.md
gitguild/template/medieval/contracts/: apprentice.md  journeyman.md  master.md
gitguild/template/software/: charter.md
gitguild/template/software/contracts/: contributor.md  maintainer.md  tester.md
h/: pre-commit-gg-only
hooks/: README.md
keydir/: gitguild.pub  isysd.pub
ledger/: account.ledger  chain.ledger  check.ledger  commodity.ledger  definitions.ledger  equity.ledger  equity.parent  tag.ledger  transaction.ledger
src/: Makefile  setup.py
src/gitguild/: __init__.py  command.py  member.py  status.py  transaction.py  types.py
src/test/: helpers.py  test_config.py  test_init.py  test_local.py  test_member.py  test_status.py  test_transactions.py
t/: helpers.sh  install_unsafe_test.sh  run_tests.sh  test_tx_engine.sh  unsafe_install_test.sh
template/: add_GUILD.patch  add_general_project_files.patch  add_member_authors.patch  clean_gitolite_admin.patch  fork_repo.patch  init_personal.patch  isysd_contribution_1.patch  ledger_basics.patch  paid_contribution.patch  personal_ledger_init.patch  register_personal_gitguild_ledger.patch  tx_post_process.patch
template/init/personal/ledger/: tag.ledger
template/register/ledger/: transaction.ledger
test/: test.key  test_cli.py  test_files.py
test/gpg/: pubring.gpg  random_seed  secring.gpg  trustdb.gpg
transaction/: init.json  register.json  transaction_genesis.json
transaction/authors/: AUTHORS.register
transaction/license/: LICENSE.MIT
transactions/init/: LICENSE.json
transactions/register_user/: AUTHORS.json
